Update: Add information

--- a/index.html
+++ b/index.html
@@ -2,13 +2,54 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/title-logo.png" />
+
+    <!-- Primary Meta -->
     <title>ARM Steels Website Development</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
-</head>
+    <meta name="title" content="ARM Steels Website Development" />
+    <meta
+      name="description"
+      content="ARM Steels – Leading provider of high-quality scaffolding, construction materials, and steel solutions with reliable services and fast delivery."
+    />
+
+    <!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Logo for Apple Touch -->
+    <link rel="apple-touch-icon" href="/logo.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="ARM Steels Website Development"
+    />
+    <meta
+      property="og:description"
+      content="ARM Steels – High-quality scaffolding and construction solutions."
+    />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="https://your-domain.com" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ARM Steels Website Development" />
+    <meta
+      name="twitter:description"
+      content="ARM Steels – High-quality scaffolding and construction materials."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <!-- Theme Colors -->
+    <meta name="theme-color" content="#004CFF" />
+    <meta name="msapplication-TileColor" content="#004CFF" />
+
+    <!-- PWA Optional -->
+    <link rel="manifest" href="/manifest.json" />
+  </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
